--- a/my-app/.gitignore
+++ b/my-app/.gitignore
@@ -61,3 +61,7 @@ aio/content/examples/.DS_Store
 
 # Ignore cache created with the Angular CLI.
 .angular/
+
+firebase.json
+.firebaserc
+.firebase/
